[tool.poetry]
name = "miko"
version = "2.0"
description = "See how to use a Python object at a glance!"
license = "MIT"
authors = ["Animenosekai <animenosekai.mail@gmail.com>"]
maintainers = ["Animenosekai <animenosekai.mail@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Animenosekai/miko"
documentation = "https://github.com/Animenosekai/miko/blob/main/README.md"
keywords = ["animenosekai", "miko", "docs", "documentation", "parser"]
classifiers = [
    # Status
    "Development Status :: 5 - Production/Stable",

    # Environment
    "Environment :: Console",

    # Audience
    "Intended Audience :: Developers",

    # Licensing
    "License :: OSI Approved :: MIT License",

    # Software Requirements
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",

    # Topics
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",

    # Code quality
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
ast-comments = "^1.1.2"
autopep8 = "^2.0.4"
isort = "^5.12.0"

[tool.poetry.scripts]
miko = 'miko.__main__:entry'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Animenosekai/miko/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
